--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -1,3 +1,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+.tabs__boton{
+    @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4;
+}
