Añadido soporte para iconos en el componente Blade Tabs. Añadida dependencia de owenvoke/blade-fontawesome

--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1338,6 +1338,9 @@ select {
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.flex-row-reverse {
+	flex-direction: row-reverse;
+}
 .flex-col {
 	flex-direction: column;
 }
@@ -1440,6 +1443,9 @@ select {
 .border-b {
 	border-bottom-width: 1px;
 }
+.border-r {
+	border-right-width: 1px;
+}
 .border-gray-300 {
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1458,6 +1464,10 @@ select {
 .border-gray-100 {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1685,6 +1695,9 @@ select {
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
 .text-gray-500 {
 	--tw-text-opacity: 1;
 	color: rgba(107, 114, 128, var(--tw-text-opacity));
@@ -1845,6 +1858,8 @@ select {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 .tabs__boton {
+	display: flex;
+	flex-direction: row-reverse;
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 	padding-top: 0.5rem;
@@ -1858,6 +1873,9 @@ select {
 .tabs__boton:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.tabs__boton{
+    gap: 10px;
 }
 .hover\:border-gray-300:hover {
 	--tw-border-opacity: 1;
