--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -4,5 +4,6 @@
 
 
 .tabs__boton{
-    @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4;
+    @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 flex flex-row-reverse;
+    gap: 10px;
 }
