--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -4,6 +4,12 @@
 
 
 .tabs__boton{
-    @apply bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 flex flex-row-reverse;
+    @apply bg-gray-300 hover:bg-gray-400 active:bg-blue-400 text-gray-800 font-bold py-2 px-4 flex flex-row-reverse;
     gap: 10px;
 }
+
+.tabs__boton--activo{
+    @apply bg-blue-400 text-gray-800 font-bold py-2 px-4 flex flex-row-reverse;
+    gap: 10px;
+}
+
