--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -13,3 +13,18 @@
     gap: 10px;
 }
 
+.boton{
+    @apply px-4 py-2 rounded-md text-sm font-medium border-0 focus:outline-none focus:ring transition; 
+}
+
+.boton--gris{
+    @apply text-white bg-gray-500 disabled:bg-gray-300 hover:bg-gray-600 active:bg-gray-700 focus:ring-gray-300;
+}
+
+.boton--azul{
+    @apply text-white bg-blue-500 disabled:bg-gray-300 hover:bg-blue-600 active:bg-blue-700 focus:ring-blue-300;
+}
+
+.boton--rojo{
+    @apply text-white bg-red-500 disabled:bg-gray-300 hover:bg-red-600 active:bg-red-700 focus:ring-red-300;
+}
