--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1116,6 +1116,18 @@ select {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
+}
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
+.my-2 {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1926,12 +1938,14 @@ select {
     gap: 10px;
 }
 .boton {
+	display: inline-block;
 	border-radius: 0.375rem;
 	border-width: 0px;
 	padding-left: 1rem;
 	padding-right: 1rem;
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+	text-align: center;
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 	font-weight: 500;
