--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -14,7 +14,7 @@
 }
 
 .boton{
-    @apply px-4 py-2 rounded-md text-sm font-medium border-0 focus:outline-none focus:ring transition; 
+    @apply inline-block px-4 py-2 rounded-md text-sm font-medium text-center border-0 focus:outline-none focus:ring transition; 
 }
 
 .boton--gris{
