--- a/dev/resources/css/app.css
+++ b/dev/resources/css/app.css
@@ -28,3 +28,7 @@
 .boton--rojo{
     @apply text-white bg-red-500 disabled:bg-gray-300 hover:bg-red-600 active:bg-red-700 focus:ring-red-300;
 }
+
+.invisible{
+    display: none;
+}
