Añadido soporte para desarrollo con Sass

--- a/dev/resources/css/app.scss
+++ b/dev/resources/css/app.scss
@@ -32,3 +32,12 @@
 .invisible{
     display: none;
 }
+
+.form-component--imageUpload{
+    
+    .botonImagen{
+        /*border-radius: 15px;*/
+        /*background-color: #EAEFFB;*/
+    }
+
+}
