--- a/dev/resources/css/app.scss
+++ b/dev/resources/css/app.scss
@@ -3,6 +3,11 @@
 @import 'tailwindcss/utilities';
 
 
+@import './reset';
+@import 'layouts';
+@import 'typography';
+
+
 .tabs__boton{
     @apply bg-gray-300 hover:bg-gray-400 active:bg-blue-400 text-gray-800 font-bold py-2 px-4 flex flex-row-reverse;
     gap: 10px;
