--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -2160,7 +2160,8 @@ img {
 .main-auth__info form input[type=submit] {
   font-size: 1.2em;
   padding: 0.75em 1.5em;
-  margin-left: 2em;
+  margin-top: 1em;
+  width: 100%;
 }
 
 .main-auth__imagen {
