--- a/dev/resources/css/layouts/_auth.scss
+++ b/dev/resources/css/layouts/_auth.scss
@@ -37,7 +37,8 @@
         input[type=submit]{
             font-size: 1.2em;
             padding: .75em 1.5em;
-            margin-left: 2em;
+            margin-top: 1em;
+            width: 100%;
         }
     }
 }
