--- a/dev/resources/css/componentes/_draglist.scss
+++ b/dev/resources/css/componentes/_draglist.scss
@@ -27,3 +27,12 @@
         }
     }
 }
+
+.drag-list__overlay{
+    background-color: rgba($color: #000000, $alpha: .9);
+    inset: 0;
+    position: fixed;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+}
