--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1018,6 +1018,22 @@ video {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 }
+.my-5{
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
+}
+.mx-3{
+	margin-left: 0.75rem;
+	margin-right: 0.75rem;
+}
+.my-10{
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+}
+.mx-10{
+	margin-left: 2.5rem;
+	margin-right: 2.5rem;
+}
 .my-2{
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
@@ -1030,29 +1046,9 @@ video {
 	margin-top: -0.5rem;
 	margin-bottom: -0.5rem;
 }
-.my-0{
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-.mx-5{
-	margin-left: 1.25rem;
-	margin-right: 1.25rem;
-}
-.mx-3{
-	margin-left: 0.75rem;
-	margin-right: 0.75rem;
-}
-.mx-10{
-	margin-left: 2.5rem;
-	margin-right: 2.5rem;
-}
-.my-10{
-	margin-top: 2.5rem;
-	margin-bottom: 2.5rem;
-}
-.my-5{
-	margin-top: 1.25rem;
-	margin-bottom: 1.25rem;
+.mx-2{
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 .mt-1{
 	margin-top: 0.25rem;
@@ -1141,20 +1137,23 @@ video {
 .-mt-px{
 	margin-top: -1px;
 }
+.mr-10{
+	margin-right: 2.5rem;
+}
+.mb-0{
+	margin-bottom: 0px;
+}
 .-mt-1{
 	margin-top: -0.25rem;
 }
 .mr-0{
 	margin-right: 0px;
 }
-.mb-0{
-	margin-bottom: 0px;
-}
 .ml-10{
 	margin-left: 2.5rem;
 }
-.mr-10{
-	margin-right: 2.5rem;
+.ml-7{
+	margin-left: 1.75rem;
 }
 .block{
 	display: block;
@@ -1267,11 +1266,11 @@ video {
 .w-40{
 	width: 10rem;
 }
-.w-96{
-	width: 24rem;
-}
 .w-1\/2{
 	width: 50%;
+}
+.w-96{
+	width: 24rem;
 }
 .min-w-full{
 	min-width: 100%;
@@ -1408,11 +1407,11 @@ video {
 .gap-5{
 	gap: 1.25rem;
 }
-.gap-2{
-	gap: 0.5rem;
-}
 .gap-3{
 	gap: 0.75rem;
+}
+.gap-2{
+	gap: 0.5rem;
 }
 .space-x-3 > :not([hidden]) ~ :not([hidden]){
 	--tw-space-x-reverse: 0;
@@ -1690,6 +1689,9 @@ video {
 }
 .p-6{
 	padding: 1.5rem;
+}
+.p-5{
+	padding: 1.25rem;
 }
 .p-8{
 	padding: 2rem;
@@ -2221,6 +2223,7 @@ img {
   margin: 0.3em 0;
   padding: 1em;
   flex-grow: 0;
+  flex-wrap: wrap;
 }
 .drag-list__item__handle {
   width: 20px;
@@ -2305,6 +2308,37 @@ img {
 	border-radius: 0.375rem;
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.botonImagen{
+	display: flex;
+	height: 10rem;
+	width: 10rem;
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	border-radius: 0.375rem;
+	border-width: 1px;
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.botonImagen:hover{
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.icono-modificador {
+  background-color: green;
+  color: white;
+  padding: 5px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
 }
 
 .loader {
@@ -2825,6 +2859,10 @@ img {
 .disabled\:bg-gray-300:disabled{
 	--tw-bg-opacity: 1;
 	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+.disabled\:text-gray-200:disabled{
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 .disabled\:opacity-25:disabled{
 	opacity: 0.25;
