--- a/dev/resources/css/componentes/_draglist.scss
+++ b/dev/resources/css/componentes/_draglist.scss
@@ -7,6 +7,7 @@
         margin: .3em 0;
         padding: 1em;
         flex-grow: 0;
+        flex-wrap: wrap;
 
         &__handle{
             width: 20px;
