Componente Livewire para busqueda de modelos

--- a/dev/resources/css/componentes/_botones.scss
+++ b/dev/resources/css/componentes/_botones.scss
@@ -30,3 +30,17 @@
 .icono--boton-2{
     width: 20px;
 }
+
+.icono--boton{
+    &-xs{
+        width: 15px;
+    }
+
+    &-sm{
+        width: 20px;
+    }
+
+    &-md{
+        width: 35px;
+    }
+}
