--- a/dev/public/css/app.css
+++ b/dev/public/css/app.css
@@ -1156,6 +1156,9 @@ video {
 .ml-7{
 	margin-left: 1.75rem;
 }
+.mr-4{
+	margin-right: 1rem;
+}
 .block{
 	display: block;
 }
@@ -1176,6 +1179,9 @@ video {
 }
 .grid{
 	display: grid;
+}
+.list-item{
+	display: list-item;
 }
 .hidden{
 	display: none;
@@ -1215,6 +1221,9 @@ video {
 }
 .h-full{
 	height: 100%;
+}
+.max-h-40{
+	max-height: 10rem;
 }
 .min-h-screen{
 	min-height: 100vh;
@@ -1284,6 +1293,15 @@ video {
 }
 .w-9\/12{
 	width: 75%;
+}
+.w-64{
+	width: 16rem;
+}
+.w-4\/12{
+	width: 33.333333%;
+}
+.w-8\/12{
+	width: 66.666667%;
 }
 .min-w-full{
 	min-width: 100%;
@@ -1463,6 +1481,9 @@ video {
 .overflow-hidden{
 	overflow: hidden;
 }
+.overflow-scroll{
+	overflow: scroll;
+}
 .overflow-x-auto{
 	overflow-x: auto;
 }
@@ -1471,6 +1492,9 @@ video {
 }
 .overflow-y-hidden{
 	overflow-y: hidden;
+}
+.overflow-y-scroll{
+	overflow-y: scroll;
 }
 .truncate{
 	overflow: hidden;
@@ -1591,6 +1615,10 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(52, 211, 153, var(--tw-border-opacity));
 }
+.border-gray-700{
+	--tw-border-opacity: 1;
+	border-color: rgba(55, 65, 81, var(--tw-border-opacity));
+}
 .bg-gray-200{
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
@@ -1674,6 +1702,10 @@ video {
 .bg-blue-200{
 	--tw-bg-opacity: 1;
 	background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
+}
+.bg-blue-100{
+	--tw-bg-opacity: 1;
+	background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-opacity-25{
 	--tw-bg-opacity: 0.25;
@@ -1865,6 +1897,9 @@ video {
 }
 .pl-4{
 	padding-left: 1rem;
+}
+.pl-8{
+	padding-left: 2rem;
 }
 .text-left{
 	text-align: left;
@@ -2380,6 +2415,16 @@ img {
   width: 20px;
 }
 
+.icono--boton-xs {
+  width: 15px;
+}
+.icono--boton-sm {
+  width: 20px;
+}
+.icono--boton-md {
+  width: 35px;
+}
+
 .drag-list__item {
   display: flex;
   align-items: center;
@@ -2852,6 +2897,10 @@ img {
 .focus\:ring-blue-200:focus{
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity));
+}
+.focus\:ring-blue-300:focus{
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(147, 197, 253, var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
 	--tw-ring-opacity: 0.5;
