--- a/dev/resources/css/componentes/_forms.scss
+++ b/dev/resources/css/componentes/_forms.scss
@@ -16,3 +16,13 @@
     align-items: center;
     height: 20px;
 }
+
+.full__overlay{
+    background-color: rgba($color: #000000, $alpha: .9);
+    inset: 0;
+    position: fixed;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    z-index:100;
+}
