--- a/dev/resources/css/componentes/_forms.scss
+++ b/dev/resources/css/componentes/_forms.scss
@@ -20,9 +20,10 @@
 .full__overlay{
     background-color: rgba($color: #000000, $alpha: .9);
     inset: 0;
-    position: fixed;
+    position: absolute;
     display: flex !important;
     justify-content: center;
     align-items: center;
     z-index:100;
+    border-radius: 20px;
 }
